--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: "vazir";
+    src: url("../fonts/Vazir-Medium-FD-WOL.woff2") format("woff2"),
+      url("../fonts/Vazir-Medium-FD-WOL.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: "vazir";
+    src: url("../fonts/Vazir-Bold-FD-WOL.woff2") format("woff2"),
+      url("../fonts/Vazir-Bold-FD-WOL.woff") format("woff");
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+  }
+}
