--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,17 @@
     font-display: swap;
   }
 }
+
+@layer components {
+  .btn {
+    @apply inline-block py-2 px-4 rounded-full;
+  }
+
+  .btn-primary {
+    @apply bg-teal-600 text-white hover:text-black hover:bg-slate-300 transition-all duration-300 ease-in;
+  }
+
+  .btn-secoundary {
+    @apply bg-slate-300 text-black hover:text-white hover:bg-teal-600 transition-all duration-300 ease-in;
+  }
+}
