--- a/src/styles.css
+++ b/src/styles.css
@@ -41,4 +41,12 @@
   .nav-item-selected {
     @apply border-b-2 border-teal-600;
   }
+
+  .form-label {
+    @apply block mb-2 dark:text-white;
+  }
+
+  .input-item {
+    @apply mb-2 w-full border border-gray-300 rounded py-2 px-4 focus:outline-none focus:ring-4 focus:ring-opacity-45 focus:ring-teal-600;
+  }
 }
