--- a/src/styles.css
+++ b/src/styles.css
@@ -49,4 +49,8 @@
   .input-item {
     @apply mb-2 w-full border border-gray-300 rounded py-2 px-4 focus:outline-none focus:ring-4 focus:ring-opacity-45 focus:ring-teal-600;
   }
+
+  .footer-heading {
+    @apply leading-3 pb-2 font-bold mb-2 border-b-2 border-teal-600 dark:text-white;
+  }
 }
